Document PPDG/src/objects/Log__c.object
<CustomObject>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Debug__c</fullName>
        <label>Debug</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <label>Exception</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fatal__c</fullName>
        <label>Fatal</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Highest_Log_Level__c</fullName>
        <formula>IF(Fatal__c &gt; 0, &apos;Fatal&apos;, 
IF(Error__c &gt; 0, &apos;Error&apos;, 
IF(Warn__c &gt; 0, &apos;Warn&apos;, 
IF(Info__c &gt; 0, &apos;Info&apos;, 
IF(Debug__c &gt; 0, &apos;Debug&apos;, 
&apos;Trace&apos; 
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Highest Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Info__c</fullName>
        <label>Info</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Debug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fatal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Log_10__c</fullName>
        <label>Log_10</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Log_1__c</fullName>
        <label>Log_1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Log_2__c</fullName>
        <label>Log_2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <label>Page</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeTaken__c</fullName>
        <label>TimeTaken</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trace__c</fullName>
        <label>Trace</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warn__c</fullName>
        <label>Warn</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Page__c</columns>
        <columns>Highest_Log_Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Error_and_Fatal</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Highest_Log_Level__c</columns>
        <columns>Exception__c</columns>
        <columns>Page__c</columns>
        <columns>User__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Highest_Log_Level__c</field>
            <operation>equals</operation>
            <value>fatal</value>
        </filters>
        <filters>
            <field>Highest_Log_Level__c</field>
            <operation>equals</operation>
            <value>error</value>
        </filters>
        <label>Error and Fatal</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>